# annie

./: Cargo.toml  build.rs
.github/workflows/: main.yml
resource/: attribution.txt  config-template
src/: config.rs  core.rs  error.rs  main.rs  mute_control.cpp  mute_control.hpp  mute_control.rs  tray_application.rs  window.rs  window_listener.rs
