[package]
name = "annie"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
comedy = "0.2.0"
dirs = "4.0.0"
flexstr = { version = "0.9.2", features = ["serde"] }
itertools = "0.10.5"
log = "0.4.17"
msgbox = "0.7.0"
once_cell = "1.17.0"
panic-message = "0.3.0"
serde = { version = "1.0.152", features = ["derive"] }
simplelog = "0.12.0"
single-instance = "0.3.3"
toml = "0.6.0"
trayicon = { version = "0.1.3", features = ["winit"] }
unicase = "2.6.0"
winapi = { version = "0.3.9", features = ["tlhelp32"] }
winit = "0.25"

[build-dependencies]
cc = "1.0.78"
vergen = {version = "7.4.3", default_features = false, features = ["build", "cargo"]}
winresource = "0.1.14"

[profile.release]
lto = true
codegen-units = 1

[profile.release-unoptimized]
inherits = "release"
opt-level = 0
lto = false
codegen-units = 256
incremental = true

[profile.release-no-lto]
inherits = "release"
lto = false
codegen-units = 16

[[bin]]
name = "annie-am"
path = "src/main.rs"
